--- a/CampusConnectApp/static/style.css
+++ b/CampusConnectApp/static/style.css
@@ -63,9 +63,9 @@
 
    .top_navbar i{
     font-size: 2.5rem;
-    padding: 2rem;
-    margin: 1rem;
-    color: white;
+    /* padding: 2rem; */
+    margin: 1.3rem;
+    /* color: white; */
     vertical-align: middle;
    }
 
@@ -74,6 +74,31 @@
     align-items: center;
     justify-content: center;
    }
+
+   .dropdown {
+    display: inline-block;
+    position: relative;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    width: 100%;
+    overflow: auto;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .dropdown-content a {
+    display: block;
+    color: #000000;
+    padding: 5px;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover {
+    color: #FFFFFF;
+    background-color: #00A4BD;
+  }
 
    .sidebar{
     position: fixed;
@@ -123,3 +148,37 @@
 
 
 
+/* login page */
+
+body{
+    height: 100vh;
+    background: linear-gradient(122deg, #111 50%,#111 0%,#444, #444 0);
+}
+
+.container{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+}
+
+.all_buttons{
+    margin: 5rem;
+}
+
+.button{
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    box-sizing: border-box;
+    padding: 1.5rem;
+    margin: 2rem;
+    font-size: 1rem;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    background-color: transparent;
+    border-radius: 10px;
+    border: 2px solid white;
+}
