--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
-    <link href="{% static 'style.css' %}" rel="stylesheet" />
+    <link href="{% static 'dashboard/style.css' %}" rel="stylesheet" />
     <link
       href="{% static 'node_modules/@fortawesome/fontawesome-free/css/fontawesome.css' %}"
       rel="stylesheet"
@@ -28,7 +28,9 @@
       <div class="top_navbar">
         <div class="logo_menu">
           <!-- logo -->
-          <div class="logo"><img src="{% static 'logo.jpeg' %}" alt="" /></div>
+          <div class="logo">
+            <img src="{% static 'dashboard/logo.jpeg' %}" alt="" />
+          </div>
           <!-- menu button -->
           <div class="menu">
             <div class="hamburger">
@@ -41,8 +43,8 @@
         <div class="dropdown">
           <button><i class="fa-solid fa-user"></i></button>
           <div class="dropdown-content">
-          <a href="">Profile</a>
-          <a href="">Log Out</a>
+            <a href="">Profile</a>
+            <a href="">Log Out</a>
           </div>
         </div>
       </div>
@@ -51,7 +53,7 @@
         <div class="sidebar_inner">
           <ul>
             <li>
-              <a href="#">
+              <a href="/">
                 <span class="icon"><i class="fa fa-qrcode"></i></span>
                 <span class="text">Dashboard</span>
               </a>
@@ -100,7 +102,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="/importantContacts">
                 <span class="icon"><i class="fa fa-id-card"></i></span>
                 <span class="text">Important Contacts</span>
               </a>
@@ -114,16 +116,18 @@
           </ul>
         </div>
       </div>
+      {%block start%} {%endblock%}
     </div>
+
     {% else %}
     <div class="container">
       <h1>Welcome to CampusConnect App</h1>
       <div class="all_buttons">
-      <a class="button" href="{% provider_login_url 'google' %}">Login using Institute ID!</a>
-      <a class="button" href="/admin">Login as Admin!</a>
-    </div>
+        <a class="button" href="{% provider_login_url 'google' %}">Login using Institute ID!</a>
+        <a class="button" href="/admin">Login as Admin!</a>
+      </div>
     </div>
     {% endif %}
   </body>
-  <script src="{% static 'script.js' %}"></script>
+  <script src="{% static 'dashboard/script.js' %}"></script>
 </html>
