connected contacts db with ui

--- a/templates/administration.html
+++ b/templates/administration.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'importantContacts/style.css' %}" />
 {% endblock %}
 <div class="container2">
-  <h3>Emergency Contacts</h3>
+  <h3>Administration Contacts</h3>
   <br />
   <br />
   <br />
