removed img icon in navbar

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,10 +41,7 @@
         <h1>Campus Connect</h1>
         <!-- <i class="fa-solid fa-user"></i> -->
         <div class="dropdown">
-          <button><i class="fa-solid fa-user"></i></button>
-          <div class="dropdown-content">
-            <a href="/logout">Log Out</a>
-          </div>
+          <a href="/logout"><h1>Log Out</h1></a>
         </div>
       </div>
       <!-- Sidebar -->
