--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -56,7 +56,7 @@
             </li>
 
             <li>
-              <a href="#">
+              <a href="/buy">
                 <span class="icon"><i class="fa fa-link"></i></span>
                 <span class="text">Buy & Sell</span>
               </a>
