--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -62,7 +62,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="/lostfound">
                 <span class="icon"><i class="fa fa-eye"></i></span>
                 <span class="text">Lost & Found</span>
               </a>
