--- a/templates/buy.html
+++ b/templates/buy.html
@@ -2,27 +2,23 @@
 <link rel="stylesheet" href="{% static 'importantContacts/style.css' %}" />
 {% endblock %}
 <div class="container2">
-  <h2>Buy</h2>
-  <br />
-  <br />
-  <br />
-  <table border="1">
+  <h1 class="main_heading">Buy</h1>
+  <a class="button sell_button" href="/sell">Sell your item here!</a>
+  <table class="table" border="1">
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Seller (Roll No)</th>
+      <th class="table_heading">Name</th>
+      <th class="table_heading">Description</th>
+      <th class="table_heading">Price</th>
+      <th class="table_heading">Seller (Roll No)</th>
     </tr>
     {% for x in data %} {% if not x.sold %}
     <tr>
-      <td>{{ x.name }}</td>
-      <td>{{ x.description }}</td>
-      <td>{{ x.price }}</td>
-      <td>{{ x.roll.name }} ({{ x.roll.roll }})</td>
+      <td class="table_data">{{ x.name }}</td>
+      <td class="table_data">{{ x.description }}</td>
+      <td class="table_data">{{ x.price }}</td>
+      <td class="table_data">{{ x.roll.name }} ({{ x.roll.roll }})</td>
     </tr>
     {%endif%} {% endfor %}
   </table>
-  <br />
-  <h3><a href="/sell">Sell your item here!</a></h3>
 </div>
 {%endblock%}
