--- a/CampusConnectApp/static/dashboard/style.css
+++ b/CampusConnectApp/static/dashboard/style.css
@@ -154,7 +154,7 @@
   display: flex;
   flex-direction: column;
   width: 30%;
-  background-color: #111;
+  /* background-color: #111; */
  }
 
  .left .fixed{
@@ -216,7 +216,7 @@
 
  .right{
   width: 70%;
-  background-color: #444;
+  /* background-color: #444; */
  }
 
 
@@ -225,7 +225,7 @@
 
 body{
     height: 100vh;
-    /* background: linear-gradient(122deg, #111 50%,#111 0%,#444, #444 0); */
+    background: linear-gradient(122deg, #111 50%,#111 0%,#444, #444 0);
 }
 
 .container3{
