--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="/team">
                   <span class="icon"><i class="fa fa-id-card"></i></span>
                   <span class="text">Team</span>
                 </a>
