--- a/templates/lostfound.html
+++ b/templates/lostfound.html
@@ -6,8 +6,8 @@
   <h1 class="main_heading">Lost and Found Portal</h1>
 
   <div class="all_buttons">
-    <a class="button" href="/lost">Lost Portal</a>
-    <a class="button" href="/found">Found Portal</a>
+    <a class="button" href="/lostfound/lost">Lost Portal</a>
+    <a class="button" href="/lostfound/found">Found Portal</a>
   </div>
 </div>
 {%endblock%}
