icons issue fixed

--- a/templates/teams.html
+++ b/templates/teams.html
@@ -1,5 +1,5 @@
 {%extends "dashboard.html" %} {% load static %} {%block start%} {% block css %}
-<link rel="stylesheet" href="{% static 'importantContacts/style.css' %}" />
+<link rel="stylesheet" href="{% static 'teams/style.css' %}" />
 {% endblock %}
 
 <div class="container2">
@@ -9,11 +9,11 @@
           <div class="border">
             <h2>Mayank Kumar</h2>
             <div class="icons">
-              <i class="fa fa-codepen" aria-hidden="true"></i>
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-              <i class="fa fa-dribbble" aria-hidden="true"></i>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-codepen" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-instagram" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-dribbble" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-twitter" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-facebook" aria-hidden="true"></i>
             </div>
           </div>
         </div>
@@ -21,11 +21,11 @@
           <div class="border">
             <h2>Shray Kumar Singh</h2>
             <div class="icons">
-              <i class="fa fa-codepen" aria-hidden="true"></i>
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-              <i class="fa fa-dribbble" aria-hidden="true"></i>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-codepen" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-instagram" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-dribbble" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-twitter" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-facebook" aria-hidden="true"></i>
             </div>
           </div>
         </div>
@@ -33,11 +33,11 @@
           <div class="border">
             <h2>Raghav Bahety</h2>
             <div class="icons">
-              <i class="fa fa-codepen" aria-hidden="true"></i>
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-              <i class="fa fa-dribbble" aria-hidden="true"></i>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-codepen" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-instagram" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-dribbble" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-twitter" aria-hidden="true"></i>
+              <i class="fa fa-brands fa-facebook" aria-hidden="true"></i>
             </div>
           </div>
         </div>
