--- a/CampusConnectApp/static/dashboard/style.css
+++ b/CampusConnectApp/static/dashboard/style.css
@@ -7,6 +7,9 @@
     text-decoration: none;
    }
    
+   body{
+    color: white;
+   }
    /* body{
     background: #f5f5f5;
    }
@@ -226,6 +229,7 @@
 body{
     height: 100vh;
     background: linear-gradient(122deg, #111 50%,#111 0%,#444, #444 0);
+    color: white;
 }
 
 .container3{
@@ -264,6 +268,7 @@ body{
   font-size: 2rem;
   text-align: center;
   margin: 1rem;
+  color: white;
 }
 .paragraph{
   padding: 0 3rem;
