--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,18 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
     <link href="{% static 'dashboard/style.css' %}" rel="stylesheet" />
-    <link
-      href="{% static 'node_modules/@fortawesome/fontawesome-free/css/fontawesome.css' %}"
-      rel="stylesheet"
-    />
-    <link
-      href="{% static 'node_modules/@fortawesome/fontawesome-free/css/brands.css' %}"
-      rel="stylesheet"
-    />
-    <link
-      href="{% static 'node_modules/@fortawesome/fontawesome-free/css/solid.css' %}"
-      rel="stylesheet"
-    />
+    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
     <title>Campus Connect</title>
   </head>
   <body>
@@ -65,7 +56,7 @@
                 <li>
                   <a href="#">
                     <span class="icon"
-                      ><i class="fa fa-question-circle"></i
+                      ><i class="fas fa-cutlery"></i
                     ></span>
                     <span class="text">Mess Menu</span>
                   </a>
@@ -78,31 +69,31 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="icon"><i class="fa fa-id-card"></i></span>
+                    <span class="icon"><i class="fa fa-taxi"></i></span>
                     <span class="text">Cab Sharing</span>
                   </a>
                 </li>
                 <li>
                   <a href="https://iiitg.ac.in">
-                    <span class="icon"><i class="fa fa-id-card"></i></span>
+                    <span class="icon"><i class="fa fa-solid fa-newspaper"></i></span>
                     <span class="text">News & Updates</span>
                   </a>
                 </li>
                 <li>
                   <a href="/importantContacts">
-                    <span class="icon"><i class="fa fa-id-card"></i></span>
+                    <span class="icon"><i class="fa fa-solid fa-address-book"></i></span>
                     <span class="text">Important Contacts</span>
                   </a>
                 </li>
                 <li>
                   <a href="/team">
-                    <span class="icon"><i class="fa fa-id-card"></i></span>
+                    <span class="icon"><i class="fa fa-users"></i></span>
                     <span class="text">Team</span>
                   </a>
                 </li>
                 <li>
                   <a href="/logout">
-                    <span class="icon"><i class="fa fa-id-card"></i></span>
+                    <span class="icon"><i class="fa fa-sign-out"></i></span>
                     <span class="text">LogOut</span>
                   </a>
                 </li>
