--- a/CampusConnectApp/static/dashboard/style.css
+++ b/CampusConnectApp/static/dashboard/style.css
@@ -1,6 +1,6 @@
 *{
-    font-family: 'Baloo Paaji 2', cursive;
-    margin: 0;
+  font-family: 'Poppins', sans-serif;    
+  margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
@@ -8,7 +8,8 @@
    }
    
    body{
-    color: white;
+    /* color: white; */
+    font-family: 'Poppins', sans-serif;
    }
    /* body{
     background: #f5f5f5;
@@ -157,16 +158,21 @@
   display: flex;
   flex-direction: column;
   width: 30%;
-  /* background-color: #111; */
+  background-color: #B7901B;
  }
 
  .left .fixed{
   position: fixed;
+  width: 30%;
  }
 
  .left .logo{
   display: flex;
+  text-decoration: none;
+  color: white;
   flex-direction: row;
+  width: 100%;
+  background-color: #926E06;
  }
 
  .left .logo img{
@@ -191,6 +197,7 @@
   color: #0e94d4;
   padding: .46rem;
   margin: .8rem;
+  transition: color 0.2s linear, background-color 0.2s linear;
  }
  
  .sidebar_content ul li a .icon{
@@ -210,16 +217,20 @@
  }
  
  .sidebar_content ul li a:hover{
-  background: #0e94d4;
+  border-radius: 10px;
+  background: #926E06;
   color: #fff;
  }
 
-
+.middle{
+  width: .1%;
+  background-color: white;
+}
 
 
  .right{
   width: 70%;
-  /* background-color: #444; */
+  background-color: #f8e8c7;
  }
 
 
@@ -228,12 +239,16 @@
 
 body{
     height: 100vh;
-    background: linear-gradient(122deg, #111 50%,#111 0%,#444, #444 0);
-    color: white;
+    font-family: 'Poppins', sans-serif;
+    /* background: linear-gradient(122deg, #111 50%,#111 0%,#444, #444 0); */
+    color: black;
 }
 
 .container3{
-    color: white;
+  background-color: #f8e8c7;
+  width: 100vw;
+  height: 100vh;
+    /* color: white; */
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -243,6 +258,7 @@ body{
 .all_buttons{
     margin: 5rem;
 }
+
 
 .button{
     display: inline-block;
@@ -254,11 +270,19 @@ body{
     font-size: 1rem;
     text-align: center;
     text-transform: uppercase;
-    color: white;
+    color: black;
     background-color: transparent;
     border-radius: 10px;
-    border: 2px solid white;
+    border: 2px solid black;
+    transition: color 0.2s linear, background-color 0.2s linear;
 }
+
+.button:hover{
+  background-color:#926E06 ;
+  color: white;
+  border: 2px solid #926E06;
+}
+
 
 
 /* utility classes */
@@ -268,15 +292,17 @@ body{
   font-size: 2rem;
   text-align: center;
   margin: 1rem;
-  color: white;
+  /* color: white; */
+  font-weight: 600;
 }
 .paragraph{
   padding: 0 3rem;
   font-size: 1.1rem;
-  font-weight: 100;
+  font-weight: 300;
 }
 
 .sub_heading{
+  font-weight: 500;
   padding: .5rem;
   margin: .5rem 2.5rem;
 }
