--- a/CampusConnectApp/static/home/style.css
+++ b/CampusConnectApp/static/home/style.css
@@ -1,12 +1,12 @@
 body{
-    color: white;
+    /* color: white; */
 }
 
-.paragraph{
+/* .paragraph{
     padding: 0 3rem;
     font-size: 1.1rem;
     font-weight: 100;
-}
+} */
 
 .sub_heading{
     padding: .5rem;
