--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,9 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
     <link href="{% static 'dashboard/style.css' %}" rel="stylesheet" />
-    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="{% static 'fontawesomefree/css/fontawesome.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="{% static 'fontawesomefree/css/brands.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="{% static 'fontawesomefree/css/solid.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>Campus Connect</title>
   </head>
   <body>
@@ -18,6 +36,7 @@
       <div class="container">
         <div class="left">
           <div class="fixed">
+            <a class="logo" href="/">
             <div class="logo">
               <img
                 class="logo_img"
@@ -26,6 +45,7 @@
               />
               <p>Campus Connect</p>
             </div>
+          </a>
             <div class="sidebar_content">
               <ul>
                 <li>
@@ -55,9 +75,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="icon"
-                      ><i class="fas fa-cutlery"></i
-                    ></span>
+                    <span class="icon"><i class="fas fa-cutlery"></i></span>
                     <span class="text">Mess Menu</span>
                   </a>
                 </li>
@@ -75,13 +93,17 @@
                 </li>
                 <li>
                   <a href="https://iiitg.ac.in">
-                    <span class="icon"><i class="fa fa-solid fa-newspaper"></i></span>
+                    <span class="icon"
+                      ><i class="fa fa-solid fa-newspaper"></i
+                    ></span>
                     <span class="text">News & Updates</span>
                   </a>
                 </li>
                 <li>
                   <a href="/importantContacts">
-                    <span class="icon"><i class="fa fa-solid fa-address-book"></i></span>
+                    <span class="icon"
+                      ><i class="fa fa-solid fa-address-book"></i
+                    ></span>
                     <span class="text">Important Contacts</span>
                   </a>
                 </li>
@@ -101,18 +123,19 @@
             </div>
           </div>
         </div>
+        <div class="middle"></div>
         <div class="right">{%block start%} {%endblock%}</div>
       </div>
     </div>
 
     {% else %}
     <div class="container3">
-      <h1>Welcome to CampusConnect App</h1>
+      <h1 class="main_heading">Welcome to CampusConnect App</h1>
       <div class="all_buttons">
-        <a class="button" href="{% provider_login_url 'google' %}"
-          >Login using Institute ID!</a
+        <a class="custom-btn button" href="{% provider_login_url 'google' %}"
+          > <span> Login using Institute ID!</span></a
         >
-        <a class="button" href="/admin">Login as Admin!</a>
+        <a class="custom-btn button" href="/admin"> <span> Login as Admin!</span></a>
       </div>
     </div>
     {% endif %}
