--- a/templates/lostform.html
+++ b/templates/lostform.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'importantContacts/style.css' %}" />
 {% endblock %}
 <div class="container2">
-  <h3>Report Lost Item</h3>
+  <h3 class="main_heading">Report Lost Item</h3>
   <form class="profile_form" method="post" enctype="multipart/form-data">
     {% csrf_token %} {{ form.as_p }}
     <button class="button" type="submit">Submit</button>
