restaurants db and view complete

--- a/templates/mess.html
+++ b/templates/mess.html
@@ -17,6 +17,6 @@
     {% endfor %}
   </table>
   <div>Not happy with the Menu?</div>
-  <a href="nearbyrestaurants">Click here to explore nearby restaurants!</a>
+  <a href="restaurants">Click here to explore nearby restaurants!</a>
 </div>
 {%endblock%}
