--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,7 +74,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="/mess">
                     <span class="icon"><i class="fas fa-cutlery"></i></span>
                     <span class="text">Mess Menu</span>
                   </a>
