--- a/templates/cabsharingform.html
+++ b/templates/cabsharingform.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'importantContacts/style.css' %}" />
 {% endblock %}
 <div class="container2">
-  <h3>Cab Sharing Request</h3>
+  <h3 class="main_heading">Cab Sharing Request</h3>
   {% if error %}
   <br />
   <br />
