--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,7 +80,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="/timetable">
                     <span class="icon"><i class="fa fa-pen"></i></span>
                     <span class="text">Time Table</span>
                   </a>
