--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -2,9 +2,32 @@
 <link rel="stylesheet" href="{% static 'importantContacts/style.css' %}" />
 {% endblock %}
 <div class="container2">
-    <img class="image" src="{% static 'timetable_images/1stYear.png' %}" alt="image not found">
-    <img class="image" src="{% static 'timetable_images/2ndYear.png' %}" alt="image not found">
-    <img class="image" src="{% static 'timetable_images/3rdYear.png' %}" alt="">
-    <img class="image" src="{% static 'timetable_images/4thYear.png' %}" alt="">
+  {%if year == 2022%}
+  <img
+    class="image"
+    src="{% static 'timetable_images/1stYear.png' %}"
+    alt="image not found"
+  />
+  {%elif year == 2021%}
+  <img
+    class="image"
+    src="{% static 'timetable_images/2ndYear.png' %}"
+    alt="image not found"
+  />
+  {%elif year == 2020%}
+  <img
+    class="image"
+    src="{% static 'timetable_images/3rdYear.png' %}"
+    alt="image not found"
+  />
+  {%elif year == 2019%}
+  <img
+    class="image"
+    src="{% static 'timetable_images/4thYear.png' %}"
+    alt="image not found"
+  />
+  {%endif%}
+  <br />
+  <h1 class="main_heading">ToDos</h1>
 </div>
 {%endblock%}
